# RAG-Flow

./: .gitignore  config.py  main.py  pyproject.toml
app/: config.py  main.py
app/db/: chat_history_manager.py  model_preferences.py  user_db.py
app/pages/: 1_model_config.py  2_chat.py
app/services/: rag_manager.py
app/utils/: build_config.py  initialize_session_state.py  pdf_utils.py
assets/: styles.css
pages/: 1_model_config.py  2_chat.py
utils/: build_config.py  chat_history_manager.py  load_model.py  pdf_utils.py  rag_manager.py
