[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.1",
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "google>=3.0.0",
    "google-genai>=1.69.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.4",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.2.1",
    "markdown>=3.10.2",
    "ollama>=0.6.1",
    "pinecone>=8.1.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "streamlit-authenticator>=0.4.2",
    "transformers>=5.5.4",
    "twelvedata>=1.2.28",
    "unstructured>=0.22.22",
    "websearch-python>=1.2.2",
    "wikipedia>=1.4.0",
]
